[gd_scene load_steps=3 format=3 uid="uid://c71vixp5ksoph"]

[ext_resource type="Texture2D" uid="uid://coj1np0r4rq45" path="res://assets/close.svg" id="1_k74we"]
[ext_resource type="Script" path="res://scenes/message.gd" id="1_o4xdj"]

[node name="Message" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o4xdj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Role" type="OptionButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "‚öôÔ∏è System"
popup/item_0/id = 0
popup/item_1/text = "üßë User"
popup/item_1/id = 1
popup/item_2/text = "ü§ñ Assistant"
popup/item_2/id = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Delete" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_k74we")
stretch_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Content" type="TextEdit" parent="MarginContainer2"]
layout_mode = 2
wrap_mode = 1
scroll_fit_content_height = true

[connection signal="item_selected" from="MarginContainer/HBoxContainer/Role" to="." method="_on_role_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="text_changed" from="MarginContainer2/Content" to="." method="_on_content_text_changed"]
