extends VBoxContainer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_role_item_selected(index: int) -> void:
	pass # Replace with function body.


func _on_delete_pressed() -> void:
	pass # Replace with function body.


func _on_content_text_changed() -> void:
	pass # Replace with function body.
